@@ -21,8 +21,6 @@ package org.apache.cassandra.sidecar.routes.sstableuploads;
 import java.nio.file.NoSuchFileException;
 import java.util.Set;
 
-import com.google.common.collect.ImmutableSet;
-
 import com.github.benmanes.caffeine.cache.Cache;
 import com.google.inject.Inject;
 import io.netty.handler.codec.http.HttpResponseStatus;
@@ -90,7 +88,7 @@ public class SSTableImportHandler extends AbstractHandler<SSTableImportRequestPa
         Set<String> eligibleResources = TABLE_SCOPE.expandedResources();
         Authorization modifyAuthorization = CassandraPermissions.MODIFY.toAuthorization(eligibleResources);
         Authorization importAuthorization = BasicPermissions.IMPORT_STAGED_SSTABLE.toAuthorization();
-        return ImmutableSet.of(modifyAuthorization, importAuthorization);
+        return Set.of(modifyAuthorization, importAuthorization);
     }
 
     /**
